--- a/index.html
+++ b/index.html
@@ -1,6 +1,372 @@
-<html>
-  <body>
-    <h1>Here's the website!</h1>
-    <p>Lorem ipsum yada yada.</p>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Utah Overpass Action</title>
+  <style>
+    :root {
+      --navy-blue: #002664;
+      --crimson: #BF0A30;
+      --white: #ffffff;
+    }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+    body {
+      background-color: var(--white);
+      color: #333;
+      line-height: 1.6;
+    }
+    header {
+      background-color: var(--navy-blue);
+      color: var(--white);
+      padding: 1rem;
+      position: sticky;
+      top: 0;
+      z-index: 100;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+    }
+    .header-container {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+    .logo {
+      font-size: 1.5rem;
+      font-weight: bold;
+    }
+    .nav-toggle {
+      display: none;
+    }
+    nav ul {
+      display: flex;
+      list-style: none;
+    }
+    nav li {
+      margin-left: 1.5rem;
+    }
+    nav a {
+      color: var(--white);
+      text-decoration: none;
+      font-weight: 500;
+      transition: color 0.3s;
+    }
+    nav a:hover {
+      color: #ccc;
+    }
+    .hero {
+      background-color: var(--crimson);
+      color: var(--white);
+      text-align: center;
+      padding: 4rem 1rem;
+    }
+    .hero h1 {
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
+    }
+    .hero p {
+      font-size: 1.2rem;
+      max-width: 800px;
+      margin: 0 auto 1.5rem;
+    }
+    .btn {
+      display: inline-block;
+      background-color: var(--white);
+      color: var(--crimson);
+      padding: 0.8rem 2rem;
+      border-radius: 4px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: all 0.3s;
+    }
+    .btn:hover {
+      background-color: var(--navy-blue);
+      color: var(--white);
+    }
+    section {
+      padding: 4rem 1rem;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+    .section-title {
+      text-align: center;
+      margin-bottom: 2.5rem;
+      color: var(--navy-blue);
+    }
+    .section-title h2 {
+      font-size: 2rem;
+      position: relative;
+      padding-bottom: 1rem;
+    }
+    .section-title h2::after {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 100px;
+      height: 3px;
+      background-color: var(--crimson);
+    }
+    .about-content {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      align-items: center;
+      gap: 2rem;
+    }
+    .about-text {
+      flex: 1;
+      min-width: 300px;
+    }
+    .about-image {
+      flex: 1;
+      min-width: 300px;
+    }
+    .about-image img {
+      width: 100%;
+      border-radius: 8px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+    }
+    .initiatives {
+      background-color: #f9f9f9;
+    }
+    .cards {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 2rem;
+    }
+    .card {
+      background-color: var(--white);
+      border-radius: 8px;
+      overflow: hidden;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+      transition: transform 0.3s;
+    }
+    .card:hover {
+      transform: translateY(-5px);
+    }
+    .card img {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+    }
+    .card-content {
+      padding: 1.5rem;
+    }
+    .card h3 {
+      margin-bottom: 1rem;
+      color: var(--navy-blue);
+    }
+    .join-us {
+      text-align: center;
+      background-color: var(--navy-blue);
+      color: var(--white);
+    }
+    .join-us .btn {
+      margin-top: 1.5rem;
+    }
+    footer {
+      background-color: #333;
+      color: var(--white);
+      text-align: center;
+      padding: 2rem 1rem;
+    }
+    .footer-content {
+      max-width: 1200px;
+      margin: 0 auto;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+    }
+    .footer-section {
+      flex: 1;
+      min-width: 250px;
+      padding: 1rem;
+    }
+    .footer-section h3 {
+      margin-bottom: 1rem;
+      border-bottom: 2px solid var(--crimson);
+      padding-bottom: 0.5rem;
+      display: inline-block;
+    }
+    .social-links {
+      display: flex;
+      justify-content: center;
+      gap: 1rem;
+      margin-top: 1rem;
+    }
+    .social-links a {
+      color: var(--white);
+      font-size: 1.2rem;
+    }
+    .copyright {
+      margin-top: 2rem;
+      padding-top: 1rem;
+      border-top: 1px solid rgba(255,255,255,0.1);
+    }
+    
+    /* Mobile Responsive Styles */
+    @media (max-width: 768px) {
+      .nav-toggle {
+        display: block;
+        background: none;
+        border: none;
+        color: var(--white);
+        font-size: 1.5rem;
+        cursor: pointer;
+      }
+      nav {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+        background-color: var(--navy-blue);
+        max-height: 0;
+        overflow: hidden;
+        transition: max-height 0.3s ease;
+      }
+      nav.open {
+        max-height: 300px;
+      }
+      nav ul {
+        flex-direction: column;
+        padding: 1rem;
+      }
+      nav li {
+        margin: 0.5rem 0;
+      }
+      .about-content {
+        flex-direction: column;
+      }
+      .hero h1 {
+        font-size: 2rem;
+      }
+      .section-title h2 {
+        font-size: 1.8rem;
+      }
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <div class="header-container">
+      <div class="logo">Utah Overpass Action</div>
+      <button class="nav-toggle">☰</button>
+      <nav>
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#initiatives">Initiatives</a></li>
+          <li><a href="#join">Join Us</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <div class="hero" id="home">
+    <h1>Utah Overpass Action</h1>
+    <p>Working together for positive change across the Beehive State</p>
+    <a href="#join" class="btn">Get Involved</a>
+  </div>
+
+  <section id="about">
+    <div class="section-title">
+      <h2>Our Mission</h2>
+    </div>
+    <div class="about-content">
+      <div class="about-text">
+        <b>This is filler content.</b> 
+        <p>Utah Overpass Action is a grassroots organization dedicated to creating positive change throughout Utah. We believe in the power of community action, education, and advocacy to build a more just, equitable, and sustainable future for all Utahns.</p>
+        <p>Founded by concerned citizens, we organize regular demonstrations, community events, and educational programs that highlight important issues and inspire meaningful dialogue across our beautiful state.</p>
+        <p>Our members come from diverse backgrounds but share a common vision: a Utah that works for everyone, not just the few. Through collective action, we can make our voices heard and create the change we wish to see.</p>
+      </div>
+      <div class="about-image">
+        <img src="https://images.unsplash.com/photo-1604948501466-4e9c339b9f82?ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=80" alt="Utah landscape with mountains and blue sky">
+      </div>
+    </div>
+  </section>
+
+  <section id="initiatives" class="initiatives">
+    <div class="section-title">
+      <h2>Our Initiatives</h2>
+    </div>
+    <div class="cards">
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1569012871812-f38ee64cd54c?ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=80" alt="People at a community gathering">
+        <div class="card-content">
+          <h3>Community Engagement</h3>
+          <p>We create spaces for civic dialogue and community building through regular events, workshops, and forums that encourage participation and collaboration.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1611175140153-bfd26338f2c2?ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=80" alt="Person holding a sign at a peaceful demonstration">
+        <div class="card-content">
+          <h3>Advocacy & Action</h3>
+          <p>Through peaceful demonstrations, letter-writing campaigns, and direct engagement with elected officials, we advocate for policies that reflect our shared values.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1544371876-225abe620d2c?ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=80" alt="People working together at a community project">
+        <div class="card-content">
+          <h3>Education & Information</h3>
+          <p>We provide resources and educational opportunities to help community members understand complex issues and make informed decisions about matters that affect all Utahns.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="join" class="join-us">
+    <div class="section-title">
+      <h2>Join the Movement</h2>
+    </div>
+    <p>Ready to make a difference? Join Utah Overpass Action today and become part of a growing community dedicated to positive change. Whether you can volunteer a few hours a month or want to take a leadership role, there's a place for you in our organization.</p>
+    <a href="#" class="btn">Sign Up Now</a>
+  </section>
+
+  <footer>
+    <div class="footer-content">
+      <div class="footer-section">
+        <h3>Contact Us</h3>
+        <p>Email: info@utahoverpassa.org</p>
+        <p>Phone: (801) 555-0123</p>
+      </div>
+      <div class="footer-section">
+        <h3>Follow Us</h3>
+        <div class="social-links">
+          <a href="#">FB</a>
+          <a href="#">TW</a>
+          <a href="#">IG</a>
+        </div>
+      </div>
+      <div class="footer-section">
+        <h3>Newsletter</h3>
+        <p>Stay updated with our monthly newsletter</p>
+      </div>
+    </div>
+    <div class="copyright">
+      <p>&copy; 2025 Utah Overpass Action. All rights reserved.</p>
+    </div>
+  </footer>
+
+  <script>
+    // Mobile navigation toggle
+    document.querySelector('.nav-toggle').addEventListener('click', function() {
+      document.querySelector('nav').classList.toggle('open');
+    });
+
+    // Close mobile menu when clicking a nav link
+    document.querySelectorAll('nav a').forEach(link => {
+      link.addEventListener('click', function() {
+        document.querySelector('nav').classList.remove('open');
+      });
+    });
+  </script>
+</body>
 </html>
